# survivor-and-shelter-resource-manager

./: CMakeLists.txt  main.c
files/: graveyard.txt  quests.txt  survivors.txt
insertingFunctions/: insertingFunctions.c  insertingFunctions.h  inserting_functions.c  inserting_functions.h
logicFunctions/: logic_functions.c  logic_functions.h
main/: main.c
programStart/: ascii_titles.c  ascii_titles.h  main_menu.c  main_menu.h  startingFuntions.c  startingFuntions.h  starting_functions.c  starting_functions.h
quest/: addFromFile.c  addFromFile.h  add_from_file.c  add_from_file.h  listOperations.c  listOperations.h  list_operations.c  list_operations.h  questStruct.h  quest_struct.h  show.c  show.h
startPage/: startPage.c
survivor/: addFromFIle.c  addFromFIle.h  addFromFile.c  addFromFile.h  add_from_file.c  add_from_file.h  file_operations.c  file_operations.h  find.c  find.h  listOperations.c  listOperations.h  list_operations.c  list_operations.h  show.c  show.h  struct.c  survivorStruct.c  survivorStruct.h  survivor_struct.c  survivor_struct.h
